@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -107,6 +107,13 @@ public interface PacketPayload {
      *            the position (0-based index)
      */
     void setPosition(int positionToSet);
+
+    /**
+     * Is it a ERROR packet.
+     * 
+     * @return
+     */
+    boolean isErrorPacket();
 
     /**
      * Is it a EOF packet.
